test/ui/src/compile_fail/std/span_guard_err.stderr
error: the `guard` control parameter is incompatible with `ok_lvl`, `err_lvl`, `panic_lvl`, or `err`
 --> src/compile_fail/std/span_guard_err.rs:1:29
  |
1 | #[emit::span(rt: RT, guard: span, err: (|err| err), "test")]
  |                             ^^^^
